// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches snapshots Icon only displayStyle: 2 size: undefined disabled: false 1`] = `
<button
  class="sc-bxivhb lhzkNS"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Icon only displayStyle: 3 size: undefined disabled: false 1`] = `
<button
  class="sc-bxivhb klgPMF"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Icon only displayStyle: 4 size: undefined disabled: false 1`] = `
<button
  class="sc-bxivhb kqVLwV"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Links displayStyle: 5 size: undefined disabled: false 1`] = `
<button
  class="sc-bxivhb gVaOZN"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 5 size: undefined disabled: false 2`] = `
<a
  class="sc-htpNat hnnQgf"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 6 size: undefined disabled: false 1`] = `
<button
  class="sc-bxivhb cCxtGj"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 6 size: undefined disabled: false 2`] = `
<a
  class="sc-htpNat goMZrk"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-ifAKCX psvBQ"
  />
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 7 size: undefined disabled: false 1`] = `
<button
  class="sc-bxivhb iEeTlS"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 7 size: undefined disabled: false 2`] = `
<a
  class="sc-htpNat jBgrZk"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 0 disabled: false 1`] = `
<button
  class="sc-bxivhb bkRlew"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 0 disabled: true 1`] = `
<button
  class="sc-bxivhb kbGIAP"
  disabled=""
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 1 disabled: false 1`] = `
<button
  class="sc-bxivhb hFWpOG"
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 1 disabled: true 1`] = `
<button
  class="sc-bxivhb dJsVJV"
  disabled=""
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-bxivhb dwjWev"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 2 disabled: true 1`] = `
<button
  class="sc-bxivhb fVGydR"
  disabled=""
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 0 disabled: false 1`] = `
<button
  class="sc-bxivhb jgHpYr"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 0 disabled: true 1`] = `
<button
  class="sc-bxivhb kTUTqe"
  disabled=""
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 1 disabled: false 1`] = `
<button
  class="sc-bxivhb dhDLPI"
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 1 disabled: true 1`] = `
<button
  class="sc-bxivhb jFXbwt"
  disabled=""
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 2 disabled: false 1`] = `
<button
  class="sc-bxivhb cLLzuW"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 2 disabled: true 1`] = `
<button
  class="sc-bxivhb jmgTTC"
  disabled=""
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 0 disabled: false 1`] = `
<button
  class="sc-bxivhb bkRlew"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 0 disabled: true 1`] = `
<button
  class="sc-bxivhb kbGIAP"
  disabled=""
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 1 disabled: false 1`] = `
<button
  class="sc-bxivhb hFWpOG"
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 1 disabled: true 1`] = `
<button
  class="sc-bxivhb dJsVJV"
  disabled=""
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-bxivhb dwjWev"
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 2 disabled: true 1`] = `
<button
  class="sc-bxivhb fVGydR"
  disabled=""
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 0 disabled: false 1`] = `
<button
  class="sc-bxivhb jgHpYr"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 0 disabled: true 1`] = `
<button
  class="sc-bxivhb kTUTqe"
  disabled=""
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 1 disabled: false 1`] = `
<button
  class="sc-bxivhb dhDLPI"
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 1 disabled: true 1`] = `
<button
  class="sc-bxivhb jFXbwt"
  disabled=""
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 2 disabled: false 1`] = `
<button
  class="sc-bxivhb cLLzuW"
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 2 disabled: true 1`] = `
<button
  class="sc-bxivhb jmgTTC"
  disabled=""
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots With intl message displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-bxivhb dwjWev"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots With intl message displayStyle: 0 size: 2 disabled: false 2`] = `
<button
  class="sc-bxivhb dwjWev"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-EHOje asQWf"
  >
    News
  </p>
</button>
`;
